compiler/tests/safety/success/arm-m4/array-export.jazz
export
fn main(reg ptr u32[4] a, reg u32 i) -> reg u32 {
  reg u32 x;
  i &= 255;
  x = a[i];
  return x;
}
