compiler/tests/safety/fail/risc-v/array-export.jazz
export
fn main(reg ptr u32[4] a, reg u32 i) -> reg u32 {
  reg u32 x;
  x = a[i];
  return x;
}
